--- a/src/Explorer.vcxproj
+++ b/src/Explorer.vcxproj
@@ -304,7 +304,7 @@ del "$(IntermediateOutputPath)temp.res"
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>ntdll.lib;Cfgmgr32.lib;oleacc.lib;winmm.lib;wininet.lib;mpr.lib;Userenv.lib;shell32.lib;%(AdditionalDependencies);dwmapi.lib</AdditionalDependencies>
+      <AdditionalDependencies>ntdll.lib;Cfgmgr32.lib;oleacc.lib;winmm.lib;wininet.lib;mpr.lib;Userenv.lib;shell32.lib;ShLwApi.Lib;shcore.lib;user32.lib;msi.lib;wtsapi32.lib;comctl32.lib;dwmapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <EntryPointSymbol>ModuleEntry</EntryPointSymbol>
       <FixedBaseAddress>false</FixedBaseAddress>
       <StackCommitSize>36864</StackCommitSize>
@@ -312,32 +312,7 @@ del "$(IntermediateOutputPath)temp.res"
     </Link>
     <PostBuildEvent>
       <Command>if not exist "$(OutDir)en-US" md "$(OutDir)en-US"
-link /dll /MACHINE:X64 /noentry /out:"$(OutDir)en-US\$(TargetFileName).mui" "$(IntermediateOutputPath)explorer.en-US.res"
-
-rc /D "_UNICODE" /D "UNICODE" /D "WINNT" /l 0x0411 /q "muiconfig.xml" /g 0x0409 /nologo /fo "$(IntermediateOutputPath)temp.res" /fm"$(IntermediateOutputPath)explorer.ja-JP.res" "localization\ja-JP\explorer.ja-JP.rc"
-if not exist "$(OutDir)ja-JP" md "$(OutDir)ja-JP"
-link /dll /MACHINE:X64 /noentry /out:"$(OutDir)ja-JP\$(TargetFileName).mui" "$(IntermediateOutputPath)explorer.ja-JP.res"
-muirct -c "$(TargetPath)" -e "$(OutDir)ja-JP\$(TargetFileName).mui"
-del "$(IntermediateOutputPath)temp.res"
-
-rc /D "_UNICODE" /D "UNICODE" /D "WINNT" /l 0x0419 /q "muiconfig.xml" /g 0x0409 /nologo /fo "$(IntermediateOutputPath)temp.res" /fm"$(IntermediateOutputPath)explorer.ru-RU.res" "localization\ru-RU\explorer.ru-RU.rc"
-if not exist "$(OutDir)ru-RU" md "$(OutDir)ru-RU"
-link /dll /MACHINE:X64 /noentry /out:"$(OutDir)ru-RU\$(TargetFileName).mui" "$(IntermediateOutputPath)explorer.ru-RU.res"
-muirct -c "$(TargetPath)" -e "$(OutDir)ru-RU\$(TargetFileName).mui"
-del "$(IntermediateOutputPath)temp.res"
-
-rc /D "_UNICODE" /D "UNICODE" /D "WINNT" /l 0x040A /q "muiconfig.xml" /g 0x0409 /nologo /fo "$(IntermediateOutputPath)temp.res" /fm"$(IntermediateOutputPath)explorer.es-ES.res" "localization\es-ES\explorer.es-ES.rc"
-if not exist "$(OutDir)es-ES" md "$(OutDir)es-ES"
-link /dll /MACHINE:X86 /noentry /out:"$(OutDir)es-ES\$(TargetFileName).mui" "$(IntermediateOutputPath)explorer.es-ES.res"
-muirct -c "$(TargetPath)" -e "$(OutDir)es-ES\$(TargetFileName).mui" 
-del "$(IntermediateOutputPath)temp.res"
-
-rc /D "_UNICODE" /D "UNICODE" /D "WINNT" /l 0x0415 /q "muiconfig.xml" /g 0x0409 /nologo /fo "$(IntermediateOutputPath)temp.res" /fm"$(IntermediateOutputPath)explorer.pl-PL.res" "localization\pl-PL\explorer.pl-PL.rc"
-if not exist "$(OutDir)pl-PL" md "$(OutDir)pl-PL"
-link /dll /MACHINE:X86 /noentry /out:"$(OutDir)pl-PL\$(TargetFileName).mui" "$(IntermediateOutputPath)explorer.pl-PL.res"
-muirct -c "$(TargetPath)" -e "$(OutDir)pl-PL\$(TargetFileName).mui"
-del "$(IntermediateOutputPath)temp.res"
-</Command>
+link /dll /MACHINE:X64 /noentry /out:"$(OutDir)en-US\$(TargetFileName).mui" "$(IntermediateOutputPath)explorer.en-US.res"</Command>
     </PostBuildEvent>
     <ResourceCompile>
       <AdditionalOptions>/D "WINNT" /g 0x0409 /q "muiconfig.xml" /fm "$(IntermediateOutputPath)%(Filename).en-US.res" %(AdditionalOptions)</AdditionalOptions>
@@ -360,39 +335,14 @@ del "$(IntermediateOutputPath)temp.res"
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EntryPointSymbol>ModuleEntry</EntryPointSymbol>
-      <AdditionalDependencies>ntdll.lib;Cfgmgr32.lib;oleacc.lib;winmm.lib;wininet.lib;mpr.lib;Userenv.lib;shell32.lib;ShLwApi.Lib;shell32.lib;shcore.lib;user32.lib;msi.lib;wtsapi32.lib;comctl32.lib;%(AdditionalDependencies);dwmapi.lib</AdditionalDependencies>
+      <AdditionalDependencies>ntdll.lib;Cfgmgr32.lib;oleacc.lib;winmm.lib;wininet.lib;mpr.lib;Userenv.lib;shell32.lib;ShLwApi.Lib;shcore.lib;user32.lib;msi.lib;wtsapi32.lib;comctl32.lib;dwmapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <FixedBaseAddress>false</FixedBaseAddress>
       <StackCommitSize>57344</StackCommitSize>
       <ManifestFile>WindowsShell.manifest</ManifestFile>
     </Link>
     <PostBuildEvent>
       <Command>if not exist "$(OutDir)en-US" md "$(OutDir)en-US"
-link /dll /MACHINE:X64 /noentry /out:"$(OutDir)en-US\$(TargetFileName).mui" "$(IntermediateOutputPath)explorer.en-US.res"
-
-rc /D "_UNICODE" /D "UNICODE" /D "WINNT" /l 0x0411 /q "muiconfig.xml" /g 0x0409 /nologo /fo "$(IntermediateOutputPath)temp.res" /fm"$(IntermediateOutputPath)explorer.ja-JP.res" "localization\ja-JP\explorer.ja-JP.rc"
-if not exist "$(OutDir)ja-JP" md "$(OutDir)ja-JP"
-link /dll /MACHINE:X64 /noentry /out:"$(OutDir)ja-JP\$(TargetFileName).mui" "$(IntermediateOutputPath)explorer.ja-JP.res"
-muirct -c "$(TargetPath)" -e "$(OutDir)ja-JP\$(TargetFileName).mui"
-del "$(IntermediateOutputPath)temp.res"
-
-rc /D "_UNICODE" /D "UNICODE" /D "WINNT" /l 0x0419 /q "muiconfig.xml" /g 0x0409 /nologo /fo "$(IntermediateOutputPath)temp.res" /fm"$(IntermediateOutputPath)explorer.ru-RU.res" "localization\ru-RU\explorer.ru-RU.rc"
-if not exist "$(OutDir)ru-RU" md "$(OutDir)ru-RU"
-link /dll /MACHINE:X64 /noentry /out:"$(OutDir)ru-RU\$(TargetFileName).mui" "$(IntermediateOutputPath)explorer.ru-RU.res"
-muirct -c "$(TargetPath)" -e "$(OutDir)ru-RU\$(TargetFileName).mui"
-del "$(IntermediateOutputPath)temp.res"
-
-rc /D "_UNICODE" /D "UNICODE" /D "WINNT" /l 0x040A /q "muiconfig.xml" /g 0x0409 /nologo /fo "$(IntermediateOutputPath)temp.res" /fm"$(IntermediateOutputPath)explorer.es-ES.res" "localization\es-ES\explorer.es-ES.rc"
-if not exist "$(OutDir)es-ES" md "$(OutDir)es-ES"
-link /dll /MACHINE:X86 /noentry /out:"$(OutDir)es-ES\$(TargetFileName).mui" "$(IntermediateOutputPath)explorer.es-ES.res"
-muirct -c "$(TargetPath)" -e "$(OutDir)es-ES\$(TargetFileName).mui" 
-del "$(IntermediateOutputPath)temp.res"
-
-rc /D "_UNICODE" /D "UNICODE" /D "WINNT" /l 0x0415 /q "muiconfig.xml" /g 0x0409 /nologo /fo "$(IntermediateOutputPath)temp.res" /fm"$(IntermediateOutputPath)explorer.pl-PL.res" "localization\pl-PL\explorer.pl-PL.rc"
-if not exist "$(OutDir)pl-PL" md "$(OutDir)pl-PL"
-link /dll /MACHINE:X86 /noentry /out:"$(OutDir)pl-PL\$(TargetFileName).mui" "$(IntermediateOutputPath)explorer.pl-PL.res"
-muirct -c "$(TargetPath)" -e "$(OutDir)pl-PL\$(TargetFileName).mui"
-del "$(IntermediateOutputPath)temp.res"
-</Command>
+link /dll /MACHINE:X64 /noentry /out:"$(OutDir)en-US\$(TargetFileName).mui" "$(IntermediateOutputPath)explorer.en-US.res"</Command>
     </PostBuildEvent>
     <ResourceCompile>
       <AdditionalOptions>/D "WINNT" /g 0x0409 /q "muiconfig.xml" /fm "$(IntermediateOutputPath)%(Filename).en-US.res" %(AdditionalOptions)</AdditionalOptions>
@@ -418,7 +368,7 @@ del "$(IntermediateOutputPath)temp.res"
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EntryPointSymbol>ModuleEntry</EntryPointSymbol>
-      <AdditionalDependencies>ntdll.lib;Cfgmgr32.lib;oleacc.lib;winmm.lib;wininet.lib;mpr.lib;Userenv.lib;shell32.lib;ShLwApi.Lib;shcore.lib;user32.lib;msi.lib;wtsapi32.lib;comctl32.lib;%(AdditionalDependencies);dwmapi.lib</AdditionalDependencies>
+      <AdditionalDependencies>ntdll.lib;Cfgmgr32.lib;oleacc.lib;winmm.lib;wininet.lib;mpr.lib;Userenv.lib;shell32.lib;ShLwApi.Lib;shcore.lib;user32.lib;msi.lib;wtsapi32.lib;comctl32.lib;dwmapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <FixedBaseAddress>false</FixedBaseAddress>
       <StackCommitSize>36864</StackCommitSize>
       <ManifestFile>WindowsShell.manifest</ManifestFile>
@@ -426,32 +376,7 @@ del "$(IntermediateOutputPath)temp.res"
     </Link>
     <PostBuildEvent>
       <Command>if not exist "$(OutDir)en-US" md "$(OutDir)en-US"
-link /dll /MACHINE:X64 /noentry /out:"$(OutDir)en-US\$(TargetFileName).mui" "$(IntermediateOutputPath)explorer.en-US.res"
-
-rc /D "_UNICODE" /D "UNICODE" /D "WINNT" /l 0x0411 /q "muiconfig.xml" /g 0x0409 /nologo /fo "$(IntermediateOutputPath)temp.res" /fm"$(IntermediateOutputPath)explorer.ja-JP.res" "localization\ja-JP\explorer.ja-JP.rc"
-if not exist "$(OutDir)ja-JP" md "$(OutDir)ja-JP"
-link /dll /MACHINE:X64 /noentry /out:"$(OutDir)ja-JP\$(TargetFileName).mui" "$(IntermediateOutputPath)explorer.ja-JP.res"
-muirct -c "$(TargetPath)" -e "$(OutDir)ja-JP\$(TargetFileName).mui"
-del "$(IntermediateOutputPath)temp.res"
-
-rc /D "_UNICODE" /D "UNICODE" /D "WINNT" /l 0x0419 /q "muiconfig.xml" /g 0x0409 /nologo /fo "$(IntermediateOutputPath)temp.res" /fm"$(IntermediateOutputPath)explorer.ru-RU.res" "localization\ru-RU\explorer.ru-RU.rc"
-if not exist "$(OutDir)ru-RU" md "$(OutDir)ru-RU"
-link /dll /MACHINE:X64 /noentry /out:"$(OutDir)ru-RU\$(TargetFileName).mui" "$(IntermediateOutputPath)explorer.ru-RU.res"
-muirct -c "$(TargetPath)" -e "$(OutDir)ru-RU\$(TargetFileName).mui"
-del "$(IntermediateOutputPath)temp.res"
-
-rc /D "_UNICODE" /D "UNICODE" /D "WINNT" /l 0x040A /q "muiconfig.xml" /g 0x0409 /nologo /fo "$(IntermediateOutputPath)temp.res" /fm"$(IntermediateOutputPath)explorer.es-ES.res" "localization\es-ES\explorer.es-ES.rc"
-if not exist "$(OutDir)es-ES" md "$(OutDir)es-ES"
-link /dll /MACHINE:X86 /noentry /out:"$(OutDir)es-ES\$(TargetFileName).mui" "$(IntermediateOutputPath)explorer.es-ES.res"
-muirct -c "$(TargetPath)" -e "$(OutDir)es-ES\$(TargetFileName).mui" 
-del "$(IntermediateOutputPath)temp.res"
-
-rc /D "_UNICODE" /D "UNICODE" /D "WINNT" /l 0x0415 /q "muiconfig.xml" /g 0x0409 /nologo /fo "$(IntermediateOutputPath)temp.res" /fm"$(IntermediateOutputPath)explorer.pl-PL.res" "localization\pl-PL\explorer.pl-PL.rc"
-if not exist "$(OutDir)pl-PL" md "$(OutDir)pl-PL"
-link /dll /MACHINE:X86 /noentry /out:"$(OutDir)pl-PL\$(TargetFileName).mui" "$(IntermediateOutputPath)explorer.pl-PL.res"
-muirct -c "$(TargetPath)" -e "$(OutDir)pl-PL\$(TargetFileName).mui"
-del "$(IntermediateOutputPath)temp.res"
-</Command>
+link /dll /MACHINE:X64 /noentry /out:"$(OutDir)en-US\$(TargetFileName).mui" "$(IntermediateOutputPath)explorer.en-US.res"</Command>
     </PostBuildEvent>
     <ResourceCompile>
       <AdditionalOptions>/D "WINNT" /g 0x0409 /q "muiconfig.xml" /fm "$(IntermediateOutputPath)%(Filename).en-US.res" %(AdditionalOptions)</AdditionalOptions>
