--- a/src/Explorer.vcxproj.filters
+++ b/src/Explorer.vcxproj.filters
@@ -255,6 +255,9 @@
     <ClInclude Include="UEMApp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="pch.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="explorer.rcv">
@@ -569,6 +572,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="desktop2\wrapctl.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
